testsuite/tests/rep-poly/T17360.stderr

T17360.hs:11:1: error:
    The first pattern in the equation for ‘foo’
    does not have a fixed runtime representation.
    Its type is:
      Id a :: TYPE r
